<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="button1" tools:ignore="DuplicateDefinition">Button</string>
    <string name="kkbox">kkbox</string>
    <string name="textview1">TextView</string>
    <string name="sure">Sure</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="_0987654321">0987654321</string>
    <string name="button2">Button</string>
    <string name="textview2">TextView</string>
    <string name="text">訊息</string>
    <string name="btn">回主頁</string>
    <string name="nam">姓名</string>
    <string name="key">密碼</string>
    <string name="surebtn">確定</string>
    <string name="phonename">電話</string>
    <string name="nextpage">next page</string>
</resources>
